# satish3_End_to_End_Time_series_modeling_and_forecasting_stock_price

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  main.py
case-studies/: 03-stock-price-forecasting-risk-dashboard.md  day3_case_study.md  day3_timeseries_forecasting.ipynb  day4_case_study.md
data/raw/: sample_ohlcv.csv
docs/: folder_structure_and_file_guide.md  project_explanation_for_juniors.md
frontend/: app.py
scripts/: check_forecast.py  generate_sample_data.py
src/stock_arima/: __init__.py  config.py  diagnostics.py  evaluate.py  forecast.py  market_data.py  model_store.py  preprocess.py  train.py
tests/: test_api.py  test_forecast.py  test_market_data.py  test_preprocess.py
